--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<html lang="en" class="h-full bg-white text-base antialiased">
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%sveltekit.assets%/favicon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    %unocss-svelte-scoped.global%
+    %sveltekit.head%
+</head>
+<body data-sveltekit-preload-data="hover" class="flex min-h-full flex-col">
+<div style="display: contents">%sveltekit.body%</div>
+</body>
 </html>
