expand dark mode support

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-white text-base antialiased">
+<html lang="en" class="h-full hue-natural bg-hue1 text-base antialiased">
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
