--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full hue-natural bg-hue1 text-base antialiased">
-<head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    %unocss-svelte-scoped.global%
-    %sveltekit.head%
-</head>
-<body data-sveltekit-preload-data="hover" class="flex min-h-full flex-col">
-<div style="display: contents">%sveltekit.body%</div>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		%unocss-svelte-scoped.global% %sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover" class="flex min-h-full flex-col">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
