--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="flex min-h-full flex-col">
+	<body data-sveltekit-preload-data="hover" class="flex min-h-full flex-col overflow-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
