--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full bg-neutral-1 text-base antialiased">
+<html lang="en" class="bg-neutral-1 h-full text-base antialiased" data-theme="auto">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
